@@ -5,8 +5,6 @@
 #
 # This file is part of skod project
 #  
-# Development version without install/uninstall
-#
 
 # Compiler and linker
 # on gnu/linux it will be symlink to gcc
@@ -19,14 +17,28 @@ PACKAGE_VERSION=1.0
 CFLAGS = -ggdb -DPACKAGE_VERSION=\"${PACKAGE_VERSION}\" -Wall -Werror
 
 # Sources
-HEADERS_SOURCES=$(wildcard *.h)
-SOURCES=$(wildcard *.c)
+SRC_DIR=src
+PREFIX=/usr
+HEADERS_SOURCES=$(wildcard $(SRC_DIR)/*.h)
+SOURCES=$(wildcard $(SRC_DIR)/*.c)
 BIN=skod
+BC_LOCATION=share/bash-completion/completions/
 
 all: skod
 
+# Compile
 skod:
-	$(CC) $(CFLAGS) $(SOURCES) -o $(BIN)
+	$(CC) $(CFLAGS) $(SOURCES) -o $@ $^
+
+# Install skod
+install: all
+	cp ${SRC_DIR}/${BIN}.bash_completion ${PREFIX}/${BC_LOCATION}/skod
+	install -Dm775 skod ${PREFIX}/bin/skod
+
+# Remove skod
+uninstall:
+	rm -f ${BC_LOCATION}/skod
+	rm -f ${PREFIX}/bin/skod
 
 # Enable debug
 debug: CFLAGS += -DDEBUG
