@@ -1,0 +1,22 @@
+# skod(1) completion                                       -*- shell-script -*-
+
+_skod()
+{
+    local cur prev opts names
+
+    COMPREPLY=()
+    cur="${COMP_WORDS[COMP_CWORD]}"
+    prev="${COMP_WORDS[COMP_CWORD-1]}"
+    opts="-h --help -s --server -p --password -P --port -l --list -d --download -U --upload -w --pwd -z --size -u --user -S --scan -m --mdtm 
+-D --delete"
+
+    if [[ ${opts} == *${prev}* ]]; then
+        return 1
+    elif [[ ${cur} == -* ]]; then
+        COMPREPLY=($(compgen -W "${opts}" -- ${cur}))
+        return 0
+    fi
+}
+complete -F _skod skod
+
+
